# screensnipe

./: .gitmodules  CMakeLists.txt  README.MD
src/: main.cpp
src/main/: ScreenCapturer.cpp  ScreenCapturer.h  ScreenSnipe.cpp  ScreenSnipe.h  screen_capturer.cpp  screen_capturer.h  screen_snipe.cpp  screen_snipe.h
src/main/conf/: setting_values.h  settings_loader.cpp  settings_loader.h
src/upload/: image_uploader.cpp  image_uploader.h  upload_config.h
src/upload/strategy/: upload_strategy.h
src/utils/: string_utils.cpp  string_utils.h
src/window/: CaptureWindow.cpp  CaptureWindow.h  SettingsWindow.cpp  capture_window.cpp  capture_window.h  settings_window.cpp  settings_window.h
